--- a/src/components/BmiConverter.css
+++ b/src/components/BmiConverter.css
@@ -5,6 +5,9 @@ body {
 
 .text-color {
     color: white;
+    margin-bottom: 2px;
+    margin-left: 3px;
+    font-size: 1.3rem;
 }
 
 .input {
@@ -29,7 +32,7 @@ input {
 .button {
     /* display: flex;
     justify-content: center; */
-    margin-top: 20px;
+    margin-top: 23px;
     border: 0;
 }
 
